--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
+          <button class="menu__btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <ul class="menu">
             <li class="menu__list">
               <a href="#" class="menu__link"> SHOP </a>
